# mirea_practice

./: .gitignore  CMakeLists.txt  LICENSE  README.md
1/1/: triangle.cpp  triangle.h
1/2/: main.cpp
1/3/: figure.cpp
14/2/: Array.h
14/3/: Set.h
2/1/: main.cpp
2/2/: circle.h
2/3/: figure.h  main.cpp
3/1/: eq2.h
3/2/: rational.cpp  rational.h
3/3/: main.cpp  rational.cpp  rational.h
6/2/: cone.h
6/3/: bay.h  ocean.h  sea.h
7/: main.cpp  type1.h  type2.h
8/: main.cpp  type3.h  type4.h
9/3/: set.h
