cmake_minimum_required(VERSION 3.24)
project(mirea_practice)

set(CMAKE_CXX_STANDARD 14)


add_executable(mirea_practice_2_1
        2/1/main.cpp
        2/1/triangle.cpp
        2/1/triangle.h
        6/1/main.cpp)
add_executable(mirea_practice_2_2
        2/2/main.cpp
        2/2/circle.cpp
        2/2/circle.h
        )
add_executable(mirea_practice_2_3
        2/3/figure.cpp
        2/3/figure.h
        2/3/main.cpp
        )
add_executable(mirea_practice_3_1
        3/1/eq2.h
        3/1/eq2.cpp
        3/1/main.cpp
        )
add_executable(mirea_practice_3_2
        3/2/rational.h
        3/2/rational.cpp
        3/2/main.cpp
        )
add_executable(mirea_practice_3_3
        3/3/rational.cpp
        3/3/rational.h
        3/3/main.cpp
        )
add_executable(mirea_practice_6_1
        6/1/main.cpp)
add_executable(mirea_practice_6_2
        6/2/cone.cpp
        6/2/cone.h
        6/2/main.cpp)
add_executable(mirea_practice_6_3
        6/3/bay.cpp
        6/3/bay.h
        6/3/main.cpp
        6/3/ocean.cpp
        6/3/ocean.h
        6/3/sea.cpp
        6/3/sea.h)
add_executable(mirea_practice_7
        7/main.cpp
        7/type1.h
        7/type1.cpp
        7/type2.h
        7/type2.cpp)
add_executable(mirea_practice_8
        8/main.cpp
        8/type3.h
        8/type3.cpp
        8/type4.h
        8/type4.cpp)
add_executable(mirea_practice_9_1
        9/1/main.cpp)
add_executable(mirea_practice_9_2
        9/2/main.cpp)
add_executable(mirea_practice_9_3
        9/3/main.cpp
        9/3/set.h
        9/3/set.cpp)
add_executable(mirea_practice_10
        10/main.cpp)
add_executable(mirea_practice_11
        11/main.cpp)
add_executable(mirea_practice_12
        12/main.cpp)
add_executable(mirea_practice_13
        13/main.cpp)
add_executable(mirea_practice_14_1
        14/1/main.cpp)
add_executable(mirea_practice_14_2
        14/2/main.cpp
        14/2/Array.h)
add_executable(mirea_practice_14_3
        14/3/main.cpp
        14/3/Set.h)

